WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282621
Content blockers don't hide content in about:blank iframes
https://bugs.webkit.org/show_bug.cgi?id=282621
Summary
Content blockers don't hide content in about:blank iframes
Brian Weinstein
Reported
2024-11-05 10:30:36 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2024-11-05 10:30:40 PST
<
rdar://problem/134273470
>
Brian Weinstein
Comment 2
2024-11-05 10:34:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36200
EWS
Comment 3
2024-11-06 07:30:57 PST
Committed
286221@main
(9b6e3f2ab478): <
https://commits.webkit.org/286221@main
> Reviewed commits have been landed. Closing PR #36200 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug