Cherry-pick 286221@main (9b6e3f2ab478). https://bugs.webkit.org/show_bug.cgi?id=282621

Content blockers don't hide content in about:blank iframes
    https://bugs.webkit.org/show_bug.cgi?id=282621
    rdar://134273470

    Reviewed by Timothy Hatcher and Alex Christensen.

    When loading about:blank iframes, we would never consult the ContentExtensionsBackend about if the
    load should be blocked, which meant we were never adding the global display none stylesheet to the
    frame's document.

    To fix this, explicitly add the global display none stylesheets from the content blockers when
    loading an about:blank frame.

    * Source/WebCore/loader/SubframeLoader.cpp:
    (WebCore::FrameLoader::SubframeLoader::loadSubframe):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/ContentRuleListNotification.mm:
    (TEST(ContentRuleList, DisplayNoneInAboutBlankIFrame)): Make sure that the h1 is correctly hidden.
    (TEST(ContentRuleList, DisplayNoneInSrcDocIFrame)): Ditto.

    Canonical link: https://commits.webkit.org/286221@main

Canonical link: https://commits.webkit.org/282416.273@webkitglib/2.46