Source/WebCore/loader/SubframeLoader.cpp
@@ -59,6 +59,7 @@
 #include "SecurityOrigin.h"
 #include "SecurityPolicy.h"
 #include "Settings.h"
+#include "UserContentProvider.h"
 #include <wtf/CompletionHandler.h>
 
 namespace WebCore {
@@ -327,6 +328,16 @@ RefPtr<LocalFrame> FrameLoader::SubframeLoader::loadSubframe(HTMLFrameOwnerEleme
     auto referrerToUse = url.isAboutBlank() ? referrer.string() : SecurityPolicy::generateReferrerHeader(policy, url, referrer, OriginAccessPatternsForWebProcess::singleton());
 
     frame->checkedLoader()->loadURLIntoChildFrame(url, referrerToUse, subFrame.get());
+
+#if ENABLE(CONTENT_EXTENSIONS)
+    RefPtr subFramePage = subFrame->page();
+    if ((url.isAboutBlank() || url.isAboutSrcDoc()) && subFramePage) {
+        subFramePage->protectedUserContentProvider()->userContentExtensionBackend().forEach([&] (const String& identifier, ContentExtensions::ContentExtension& extension) {
+            if (RefPtr styleSheetContents = extension.globalDisplayNoneStyleSheet())
+                subFrame->document()->extensionStyleSheets().maybeAddContentExtensionSheet(identifier, *styleSheetContents);
+        });
+    }
+#endif
 
     document->decrementLoadEventDelayCount();
 
